Update Docker image base to OpenJDK-16